@@ -12,6 +12,7 @@
 
 HV *build_texinfo_tree (void);
 HV *build_label_list (void);
+HV *build_index_data (void);
 
 MODULE = Parsetexi		PACKAGE = Parsetexi		
 
@@ -73,3 +74,7 @@ build_texinfo_tree ()
 
 HV *
 build_label_list ()
+
+HV *
+build_index_data ()
+
