@@ -238,7 +238,7 @@ sub parse_texi_file ($$)
   #print "Getting tree...\n";
 
   my ($TREE, $LABELS, $INDEX_NAMES, $ERRORS);
-  if (0) {
+  if (1) {
     # This is our third way of passing the data: construct it using
     # Perl api directly.
     print "Parsing file...\n";
@@ -247,13 +247,13 @@ sub parse_texi_file ($$)
     $TREE = build_texinfo_tree ();
     print "Got tree...\n";
     #print Texinfo::Parser::_print_tree ($TREE);
-    print ref($TREE->{'contents'}[1]{'extra'}{'node_content'}), "\n";
 
     $LABELS = build_label_list ();
 
     # TODO: Get $INDEX_NAMES as well
+    $INDEX_NAMES = build_index_data ();
 
-  } elsif (1) {
+  } elsif (0) {
     # $| = 1; # Flush after each print
     print "Parsing file...\n";
     parse_file ($file_name);
@@ -363,52 +363,3 @@ sub labels_information($)
 1;
 __END__
 # Below is stub documentation for your module. You'd better edit it!
-
-=head1 NAME
-
-Parsetexi - Perl extension for blah blah blah
-
-=head1 SYNOPSIS
-
-  use Parsetexi;
-  blah blah blah
-
-=head1 DESCRIPTION
-
-Stub documentation for Parsetexi, created by h2xs. It looks like the
-author of the extension was negligent enough to leave the stub
-unedited.
-
-Blah blah blah.
-
-=head2 EXPORT
-
-None by default.
-
-
-
-=head1 SEE ALSO
-
-Mention other useful documentation such as the documentation of
-related modules or operating system documentation (such as man pages
-in UNIX), or any relevant external documentation such as RFCs or
-standards.
-
-If you have a mailing list set up for your module, mention it here.
-
-If you have a web site set up for your module, mention it here.
-
-=head1 AUTHOR
-
-A. U. Thor, E<lt>g@slackware.lanE<gt>
-
-=head1 COPYRIGHT AND LICENSE
-
-Copyright (C) 2014 by A. U. Thor
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.18.1 or,
-at your option, any later version of Perl 5 you may have available.
-
-
-=cut
