@@ -1,0 +1,7 @@
+@node Top
+
+@xref{Second}.
+
+@node Second
+
+Got here.
